--- a/tests/index.html
+++ b/tests/index.html
@@ -4,13 +4,20 @@
 </head>
 <body>
 <div>
-    <div>fetch random user</div>
     <div>
-        <button id="fetch-random-user-btn">
-            fetch
+        <button id="btn-code-test">
+            test
+        </button>
+        <button id="btn-code-200">
+            200
+        </button>
+        <button id="btn-code-403">
+            403
+        </button>
+        <button id="btn-code-404">
+            404
         </button>
     </div>
-    <div id="fetch-random-user-result"></div>
 </div>
 <script src="tests.bundle.js"></script>
 </body>
