--- a/tests/index.html
+++ b/tests/index.html
@@ -19,6 +19,6 @@
         </button>
     </div>
 </div>
-<script src="tests.bundle.js"></script>
+<script src="bundle.js"></script>
 </body>
 </html>
